Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>URDME by ahellander</title>
+    <title>URDME by URDME</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
@@ -18,13 +18,13 @@
         <h1>URDME</h1>
         <p></p>
 
-        <p class="view"><a href="https://github.com/ahellander/urdme">View the Project on GitHub <small>ahellander/urdme</small></a></p>
+        <p class="view"><a href="https://github.com/URDME/urdme">View the Project on GitHub <small>URDME/urdme</small></a></p>
 
 
         <ul>
-          <li><a href="https://github.com/ahellander/urdme/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/ahellander/urdme/tarball/master">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="https://github.com/ahellander/urdme">View On <strong>GitHub</strong></a></li>
+          <li><a href="https://github.com/URDME/urdme/zipball/master">Download <strong>ZIP File</strong></a></li>
+          <li><a href="https://github.com/URDME/urdme/tarball/master">Download <strong>TAR Ball</strong></a></li>
+          <li><a href="https://github.com/URDME/urdme">View On <strong>GitHub</strong></a></li>
         </ul>
       </header>
       <section>
@@ -56,7 +56,7 @@ $ git checkout gh-pages
 <p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
       </section>
       <footer>
-        <p>This project is maintained by <a href="https://github.com/ahellander">ahellander</a></p>
+        <p>This project is maintained by <a href="https://github.com/URDME">URDME</a></p>
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
     </div>
