--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="URDME : ">
+    <meta name="description" content="URDME : Stochastic reaction-diffusion simulation on unstructured meshes.">
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
@@ -19,7 +19,7 @@
           <a id="forkme_banner" href="https://github.com/URDME/urdme">View on GitHub</a>
 
           <h1 id="project_title">URDME</h1>
-          <h2 id="project_tagline"></h2>
+          <h2 id="project_tagline">Stochastic reaction-diffusion simulation on unstructured meshes.</h2>
 
             <section id="downloads">
               <a class="zip_download_link" href="https://github.com/URDME/urdme/zipball/master">Download this project as a .zip file</a>
