--- a/index.html
+++ b/index.html
@@ -94,6 +94,13 @@ See the file AUTHORS for complete list of authors. </p>
 
 <p>URDME: A modular framework for stochastic simulation of reaction-transport processes in complex geometries, 
 B. Drawert, S. Engblom and A. Hellander, BMC Systems Biology 2012 6:76</p>
+
+<h3>
+<a id="acknowledgments" class="anchor" href="#acknowledgments" aria-hidden="true"><span class="octicon octicon-link"></span></a>Acknowledgments</h3>
+<p>This work was financially supported by the Swedish Research Council within the UPMARC Linnaeus center of Excellence.</p>
+<a href="http://www.upmarc.se">
+<img border="0" alt="UPMARC LOGO" src="http://www.it.uu.se/research/upmarc/UPMARC_700x197.gif" width="350" height="100">
+</a>
       </section>
     </div>
 
